# Boilerplates

./: .gitignore  README.md  renovate.json
.github/scripts/: parse-renovate-pr.py
.github/workflows/: discord-renovate-notifications-modular.yml  discord-renovate-notifications.yml  renovate.json
cookiecutter/: README.md
cookiecutter/project_CLI/: cookiecutter.json
cookiecutter/project_CLI/hooks/: post_gen_project.py
cookiecutter/project_CLI/{{cookiecutter.project_slug}}/: pyproject.toml
docker-compose/: README.md
docker-compose/Core/: .env-exemple  README.md  docker-compose.yml
docker-compose/Core/config/: core.config.toml  periphery.config.toml
docker-compose/Dashboard/: .env-exemple  README.md  docker-compose.yml
docker-compose/Development/: .env-exemple  README.md  docker-compose.yml
docker-compose/Documents/: .env-exemple  README.md  docker-compose.yml
docker-compose/Games/: .env-exemple  README.md  docker-compose.yml
docker-compose/Games-Managed/: .env-exemple  README.md  config-example.yml  docker-compose.yml
docker-compose/Games-Standalone/: .env-exemple  docker-compose.yml
docker-compose/Home/: .env-exemple  README.md  docker-compose.yml
docker-compose/Infrastructure/: README.md  docker-compose.yml
docker-compose/Media/: .env-exemple  README.md  config-exemple.yml  docker-compose.yml
docker-compose/Monitoring/: .env-exemple  README.md  agents-docker-compose.yaml  docker-compose.yml  scrutiny_example.yaml
docker-compose/Network/: .env-exemple  README.md  docker-compose.yml
docker-compose/Reverse Proxy/: docker-compose.yml
docker-compose/Reverse-Proxy/: .env-exemple  .env-exemple_godoxy  README.md  docker-compose.yml
docker-compose/Reverse-Proxy/config_godoxy/: config.yml
docker-compose/Reverse-Proxy/config_traefik/: traefik-dynamic.yml  traefik.yml
docker-compose/Tools/: .env-exemple  README.md  docker-compose.yml
